[package]
name = "wasm-chip8"
license = "MIT"
version = "0.1.0"
edition = "2021"
authors = ["Kamil Adamiec <irdcat@github.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2"
js-sys = "0.3.60"

[dependencies.web-sys]
version = "0.3"
features = [
    "Attr",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Text",
    "Window"
]